# open_gl_tutorial

./: .gitignore  .gitmodules
YearTwoOpenGLProject/: .gitignore  CMakeLists.txt  YearTwoOpenGLProject.sln
YearTwoOpenGLProject/GridTutorial/: CMakeLists.txt
YearTwoOpenGLProject/GridTutorial/include/: GridApplication.h
YearTwoOpenGLProject/GridTutorial/src/: main.cpp
YearTwoOpenGLProject/OpenGLEngine/: CMakeLists.txt  YearTwoOpenGLProject.vcxproj  YearTwoOpenGLProject.vcxproj.filters
YearTwoOpenGLProject/OpenGLEngine/include/: Application.h  CameraApplication.h  Planet.h  Quaternion.h  Transform.h  Utils.h
YearTwoOpenGLProject/OpenGLEngine/include/Assets/: AnimatedMeshShader.h  Asset.h  FBXMesh.h  Grid.h  GridMesh.h  Material.h  Mesh.h  MeshShader.h  Shader.h  TextAsset.h  Texture.h
YearTwoOpenGLProject/OpenGLEngine/include/Cameras/: Camera.h  FlyCamera.h
YearTwoOpenGLProject/OpenGLEngine/include/MathTypes/: BoundingSphere.h  Transform.h
YearTwoOpenGLProject/OpenGLEngine/include/Rendering/: RenderData.h
YearTwoOpenGLProject/OpenGLEngine/include/Resources/: Asset.h  Mesh.h  Shader.h  TextAsset.h
YearTwoOpenGLProject/OpenGLEngine/include/Tree/: BaseModifier.h  Node.h
YearTwoOpenGLProject/OpenGLEngine/include/Utils/: DequeueMap.h
YearTwoOpenGLProject/OpenGLEngine/src/: Application.cpp  CameraApplication.cpp  Quaternion.cpp  Utils.cpp  imgui_impl_glfw_gl3.cpp
YearTwoOpenGLProject/OpenGLEngine/src/Assets/: AnimatedMeshShader.cpp  Asset.cpp  GridMesh.cpp  Material.cpp  Mesh.cpp  MeshShader.cpp  Shader.cpp  TextAsset.cpp  Texture.cpp
YearTwoOpenGLProject/OpenGLEngine/src/Cameras/: Camera.cpp  FlyCamera.cpp
YearTwoOpenGLProject/OpenGLEngine/src/MathTypes/: BoundingSphere.cpp  Quaternion.cpp  Transform.cpp
YearTwoOpenGLProject/OpenGLEngine/src/Resources/: Asset.cpp
YearTwoOpenGLProject/YearTwoOpenGLProject/: YearTwoOpenGLProject.vcxproj  YearTwoOpenGLProject.vcxproj.filters
YearTwoOpenGLProject/YearTwoOpenGLProject/src/: Application.h  BaseProperty.h  Camera.cpp  Camera.h  CameraApplication.cpp  CameraApplication.h  FlyCamera.cpp  FlyCamera.h  Grid.h  GridApplication.h  Model.h  Modifier.h  Planet.cpp  Property.h  Quaternion.h  Scene.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h  Utils.h  main.cpp
YearTwoOpenGLProject/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  ComputerGraphics.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
YearTwoOpenGLProject/_build/GridTutorial/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  GridTutorial.sln  GridTutorial.vcxproj  GridTutorial.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
YearTwoOpenGLProject/_build/OpenGLEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenGLEngine.sln  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
YearTwoOpenGLProject/cmake/: FindFBX.cmake
YearTwoOpenGLProject/data/shaders/: default.shader  lighting.shader  skinning.shader  textured.shader
YearTwoOpenGLProject/data/shaders/fragment/: default.frag  lit.frag  textured.frag
YearTwoOpenGLProject/data/shaders/vertex/: default.vert  skinning.vert
YearTwoOpenGLProject/data/textures/: cliff.tga  dirt.tga  dirt2.tga  dirt_grass.tga  rocky_ground.tga  sand.tga
